# NTPN_GUI

./: .coveragerc  .dockerignore  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  NTPN_APP.py  README.md  REFACTORING_PROGRESS.md  STATE_MANAGER_MIGRATION.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
data/demo_data/: context_labels.npz
ntpn/: __init__.py  analysis.py  data_loaders.py  data_processing.py  data_service.py  logging_config.py  model_service.py  ntpn_constants.py  ntpn_utils.py  plotting.py  point_net.py  point_net_utils.py  state_manager.py  visualization_service.py
pages/: import_and_load_page.py  mapper_page.py  ntpn_landing_page.py  ntpn_visualisations_page.py  train_model_page.py  vrtda_page.py
scripts/: migrate_demo_data.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/fixtures/: __init__.py  sample_data.py
tests/integration/: __init__.py  test_data_pipeline.py  test_model_pipeline.py  test_visualization_pipeline.py
tests/regression/: __init__.py  test_bug_fixes.py  test_no_print_statements.py  test_point_net_utils_backward_compat.py  test_service_backward_compat.py  test_state_migration.py
tests/unit/: __init__.py  test_analysis.py  test_constants.py  test_data_loaders.py  test_data_processing.py  test_data_service.py  test_logging_config.py  test_model_service.py  test_plotting.py  test_point_net.py  test_state_manager.py  test_visualization_service.py
