[project]
name = "ntpn-gui"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["ntpn"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E402", "E501", "E741"]

[tool.ruff.lint.isort]
known-first-party = ["ntpn"]

[tool.ruff.format]
quote-style = "single"
